# udp-client

./: Makefile.am  configure.ac
etc/: udp_client.conf
src/udp_client/: input.c  input.h  main.c  misc.c  output.c  output.h  rtp.c  rtp.h  segmenter.c  segmenter.h
